Updated project title.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP_1_starting</name>
+	<name>textbook-rental-library</name>
 	<comment></comment>
 	<projects>
 	</projects>
